--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,11 +13,11 @@
     <% if user_signed_in? %>
     <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete %></li>
     <div>あなたの名前:<%= current_user.name %>フォロー数:<%= current_user.following.count%></div>
+    <li><%= link_to "マイページ", users_path(current_user.id) %></li>
     <% else %>
     <li><%= link_to 'ログイン', new_user_session_path %></li>
     <li><%= link_to 'サインアップ', new_user_registration_path %></li>
     <% end %>>
-    <li><%= link_to 'ユーザー一覧', users_path if user_signed_in? %></li>
 
     <%= yield %>
   </body>
